Finish UnboundedInt and make more efficient